--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.3.4",
     "anychart-react": "^1.4.1",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
@@ -13,11 +14,14 @@
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-bootstrap-time-picker": "^2.0.1",
     "react-chartjs-2": "^2.9.0",
+    "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-moment": "^0.9.7",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-time-picker": "^4.0.1",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
